Fix menu doesn't hide on mobile

--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -10,10 +10,14 @@
     --text: #dadada;
 }
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 body {
     background-color: var(--bg);
     color: var(--text);
-    overflow-x: hidden;
 }
 
 // Utility classes
